--- a/main.html
+++ b/main.html
@@ -24,11 +24,11 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">content</a>
+                <a class="nav-link" href="#">content123</a>
               </li>
             </ul>
             <span class="navbar-text">
-              About
+              About 123
             </span>
           </div>
         </div>
